--- a/PCB/Vertex-FTL2011/Readme
+++ b/PCB/Vertex-FTL2011/Readme
@@ -5,4 +5,6 @@ Along with the TX, the board can hand RX as well, two pads are there to connecte
 The uC is an Arduino Pro Mini either 5v or 3v3 versions. Along with the uC the board includes a Ublox Neo 6m GPS module.
 
 
-![pcb_eagle_snip](https://cloud.githubusercontent.com/assets/22154008/20126764/f59d448a-a605-11e6-9024-55bf624ab5a8.PNG)
+![pcb_eagle_snip](https://c5.staticflickr.com/6/5803/30762352012_96a7987ef3.jpg)
+
+[url=https://flic.kr/p/NSn6vw][img]https://c5.staticflickr.com/6/5803/30762352012_96a7987ef3.jpg[/img][/url][url=https://flic.kr/p/NSn6vw]f59d448a-a605-11e6-9024-55bf624ab5a8[/url] by [url=https://www.flickr.com/photos/77812812@N02/]Pickles_21[/url], on Flickr
